--- a/startup.css
+++ b/startup.css
@@ -44,4 +44,10 @@ input {
 	color: white;
 	font-family: Montserrat;
 	font-weight:700;
+	font-size: 20px;
+	margin-top:200px;
+}
+
+.primary:hover {
+	border-radius: 0px;
 }
