--- a/startup.css
+++ b/startup.css
@@ -39,7 +39,7 @@ input {
 	width: 200px;
 	margin-top:30px;
 	background-color: #ff5859;
-	border: solid 3px black;
+	border: none;
 	box-shadow: 0px 3px 6px rgba(106, 13, 30, 0.6);
 	color: white;
 	font-family: Montserrat;
