--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ input {
 	padding: 5px 20px;
 	width: 200px;
 	border: none;
-	margin-top: 30px;
 	background-color: #ff5859;
 	box-shadow: 0px 3px 6px rgba(106, 13, 30, 0.6);
 	color: white;
@@ -46,6 +45,7 @@ input {
 	font-weight: 700;
 	font-size: 20px;
 	margin-top: 200px;
+	justify-content: center;
 }
 
 .primary:hover {
