--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ input {
 	width: 300px;
 }
 
+.centered_elements { 
+	display: flex; 
+	justify-content: center;  
+}
+
 .primary {
 	border-radius: 100px;
 	padding: 5px 20px;
@@ -45,8 +50,6 @@ input {
 	font-weight: 700;
 	font-size: 20px;
 	margin-top: 200px;
-	display: flex;
-	justify-content: center;
 }
 
 .primary:hover {
