--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ input {
 	border-radius: 100px;
 	padding: 5px 20px;
 	width: 200px;
-	outline: none;
+	border: solid 0px;
 	background-color: #ff5859;
 	box-shadow: 0px 3px 6px rgba(106, 13, 30, 0.6);
 	color: white;
