--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ input {
 .primary {
 	border-radius: 100px;
 	padding: 5px 20px;
+	border: none;
 	width: 200px;
 	background-color: #ff5859;
 	box-shadow: 0px 3px 6px rgba(106, 13, 30, 0.6);
