--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ h1 {
 
 .container {
 	color: white;
+	justify-content: center;
 	text-align: center;
-	position: relative;
 	top: 180px;
 }
 
@@ -25,17 +25,17 @@ form {
 	margin-top: 20px;
 	font-family: Montserrat;
 }
-
+/*
 input {
 	border-radius: 9px;
 	border: none;
 	box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
 	width: 300px;
-}
+}*/
 
 .centered_elements { 
-	display: flex; 
-	justify-content: center;  
+	display: flex;
+	justify-content: center;
 }
 
 #mc_embed_signup input.primary {
